change env data base

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=postgresql://admin:od4SFeJGOkmb3QslELGfY3ZW3vNuHtHr@dpg-ckc0s14iibqc73dcmb8g-a.oregon-postgres.render.com/auth_3be9"
+# DATABASE_URL=postgresql://admin:od4SFeJGOkmb3QslELGfY3ZW3vNuHtHr@dpg-ckc0s14iibqc73dcmb8g-a.oregon-postgres.render.com/auth_3be9"
+DATABASE_URL=postgres://admin:od4SFeJGOkmb3QslELGfY3ZW3vNuHtHr@dpg-ckc0s14iibqc73dcmb8g-a/auth_3be9
