--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
+    "postinstall": "prisma generate",
     "prod": "env-cmd -f .prod.env node app.js"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prisma": "^5.3.1"
   }
 }
